# projected-gradients

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  measure_basins.ipynb  pyproject.toml  requirements.txt
data/: __init__.py  load_dataset.py
projected_gradients/: perturbations.py  projection.py  store.py  svd_projection.py
projected_gradients/trainers/: base_trainer.py  dataset_manager.py  metrics.py  projected_trainer.py
projected_gradients/utils/: __init__.py  tqdm.py  visage.py
projected_gradients/utils/eval_utils/: model_utils.py
projected_gradients/utils/safety_score/: safety_metrics.py  safety_score_factory.py
tests/: test_perturbations.py  test_svd_projection_store.py
